# foundry

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/celery_pipeline_example/: README.md  main_app.py  my_pipelines.py
examples/correction_deck_quickstart/: README.md  trouble_shooting.txt
examples/human_in_the_loop_example/: README.md  foundry_hitl_example.db  hhuman_in_the_loop_example.py
examples/local_finetuning_station/: Dockerfile  README.md  docker-compose.yml  requirements.txt
examples/local_finetuning_station/app/: gpu_lock.py  main.py  state.py
examples/local_finetuning_station/templates/: layout.html  pre_training_summary.html
examples/local_finetuning_station/workers/: inference_worker.py  training_worker.py
examples/production_run/: README.md
examples/production_run/app/: pipeline.py
examples/production_run/templates/: clarification_feed.html  layout.html  report.html
examples/production_run/use_cases/: mock_data.py
foundry/: README.md
foundry/examples/correction_deck_quickstart/: quickstart.py
foundry/examples/human_in_the_loop_example/: hhuman_in_the_loop_example.py
foundry/src/foundry.egg-info/: PKG-INFO  SOURCES.txt
production_run/: README.md  production_run.py
production_run/app/: main.py  schemas.py
production_run/use_cases/: simulators.py
src/foundry/: celery_integration.py  correction.py  human_in_the_loop.py  pipeline.py
src/foundry.egg-info/: requires.txt
src/foundry_ai.egg-info/: PKG-INFO  top_level.txt
templates/partials/: _clarification_complete.html  _clarification_pole.html
(+24 files in other folders)
